--- a/package.json
+++ b/package.json
@@ -20,15 +20,16 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "chart.js": "^3.8.0",
+    "connect-flash": "^0.1.1",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.3",
-    "memorystore": "^1.6.7",
     "method-override": "^3.0.0",
     "mime": "^1.6.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "session-file-store": "^1.5.0"
   }
 }
